add Docker installing and expand LVM

--- a/invertory.cfg
+++ b/invertory.cfg
@@ -1,3 +1,22 @@
+# place all nodes below
+# multi manager deployment available
+
 docker-swarm-1 ansible_ssh_host=13.93.37.243 ansible_ssh_pass=Passw0rd
 docker-swarm-2 ansible_ssh_host=13.93.34.0 ansible_ssh_pass=Passw0rd
+
+#[docker-swarm-manager]
+#docker-swarm-1
+
+#[docker-swarm-node]
+#docker-swarm-2
+
+#[docker-swarm:children]
+#docker-swarm-manager
+#docker-swarm-node
+
+
+[managers]
+docker-swarm-1
+[workers]
+docker-swarm-2
 
