molecule test and other modding

--- a/roles/Bessonov.docker-swarm/tasks/swarm_cluster_state.yml
+++ b/roles/Bessonov.docker-swarm/tasks/swarm_cluster_state.yml
@@ -81,6 +81,7 @@
   run_once: true
   delegate_to: "{{ hostname_to_node[item.split('|')[0]] }}"
   delegate_facts: true
+  debugger: on_failed
   set_fact:
     swarm_node_status: "{{ item.split('|')[1] }}"
     swarm_node_availability: "{{ item.split('|')[2] }}"
