--- a/roles/danny.application/tasks/main.yml
+++ b/roles/danny.application/tasks/main.yml
@@ -11,11 +11,13 @@
     dest: wordpress-swarm
 
 - name: deploy wordpress stack
-  command: docker stack deploy --compose-file wordpress-swarm/docker-stack.yml wordpress 
+  shell: docker stack deploy --compose-file wordpress-swarm/docker-stack.yml wordpress ; touch /tmp/done
+  args:
+    creates: /tmp/done
   environment:
       #DOCKER_HOST: "tcp://{{ hostvars[swarm_worker_hosts].ansible_ssh_host  }}:2376"
-      DOCKER_HOST: "tcp://{{swarm_worker_hosts }}:2376"
+      DOCKER_HOST: "tcp://{{ swarm_worker_hosts }}:2376"
       DOCKER_TLS_VERIFY: 1
   register: docker_stack_deploy_result
-- debug:
-    var: docker_stack_deploy_result
+#- debug:
+#    var: docker_stack_deploy_result
