--- a/invertory.cfg
+++ b/invertory.cfg
@@ -1,22 +1,18 @@
-# place all nodes below
-# multi manager deployment available
-
-docker-swarm-1 ansible_ssh_host=13.93.37.243 ansible_ssh_pass=Passw0rd
-docker-swarm-2 ansible_ssh_host=13.93.34.0 ansible_ssh_pass=Passw0rd
-
-#[docker-swarm-manager]
-#docker-swarm-1
-
-#[docker-swarm-node]
-#docker-swarm-2
-
-#[docker-swarm:children]
-#docker-swarm-manager
-#docker-swarm-node
-
+swarm-1 ansible_ssh_host=swwarm1.westeurope.cloudapp.azure.com  ansible_ssh_pass=Passw0rd
+swarm-2 ansible_ssh_host=swwarm2.westeurope.cloudapp.azure.com  ansible_ssh_pass=Passw0rd
 
 [managers]
-docker-swarm-1
-[workers]
-docker-swarm-2
+swarm-1
 
+[workers]
+swarm-2
+
+[azure]
+azurelocal
+
+[azure:vars]
+vm_name=swwarm
+admin_username=azureuser
+admin_password=Passw0rd
+location=westeurope
+resource_group=swarm2
