--- a/.travis.yml
+++ b/.travis.yml
@@ -86,11 +86,9 @@ install:
   - pip install -I -r ~/.ansible/roles/azure.azure_preview_modules/files/requirements-azure.txt
   - pip install docker
   - pip freeze
-  - cp -f ./vmss/ansible.cfg /home/travis/.ansible
+  - cp -f ./ansible.cfg /home/travis/.ansible
 
-  - git clone https://github.com/Azure-Samples/ansible-playbooks.git
-  - cd ansible-playbooks
-  - git checkout $TRAVIS_BRANCH
+  - git clone https://github.com/Magopancione/docker-swarm.git 
 
 script:
   - scan_test
