--- a/.travis.yml
+++ b/.travis.yml
@@ -43,11 +43,10 @@ before_install:
 
       branch=$TRAVIS_BRANCH;
       echo branch is $branch;
-      #git pull;
 
       diffstr=$(git diff $branch remotes/origin/master --name-only  -- '*.yml' --no-pager);
       changedfiles=($diffstr);
-      excludedList="vm_create_existingvnet_deployjavaapp.yml .travis.yml aks_create_scale.yml webapp.yml rest/sql-managed-instance.yml vm_create_image.yml";
+      excludedList=".travis.yml";
 
       echo start = $start, end = $end, list_lenth = ${#changedfiles[@]};
 
