--- a/.travis.yml
+++ b/.travis.yml
@@ -44,27 +44,7 @@ before_install:
       branch=$TRAVIS_BRANCH;
       echo branch is $branch;
 
-      diffstr=$(git diff $branch remotes/origin/master --name-only  -- '*.yml' --no-pager);
-      changedfiles=($diffstr);
-      excludedList=".travis.yml";
-
-      echo start = $start, end = $end, list_lenth = ${#changedfiles[@]};
-
-      for (( i = $start; i < $end; i++ )); do
-        echo file is ${#changedfiles[$i]};
-        if [ "$i" -lt "${#changedfiles[@]}" ]; then
-          excluded=false;
-          for item in ${excludedList[*]}; do
-            if [ "${changedfiles[$i]}" == "$item" ]; then
-              excluded=true;
-              break;
-            fi
-          done;
-          if [ "$excluded" == false ]; then
-            run_test ${changedfiles[$i]};	
-          fi
-        fi
-      done;
+      run_test playbook.yml;	
     }
 
 install:
