--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,7 @@ install:
   - pip install docker
   - pip freeze
   - cp -f ./ansible.cfg /home/travis/.ansible
+  - cp -f ./invertory.cfg /home/travis/.ansible
 
   - git clone https://github.com/Magopancione/docker-swarm.git 
   - git checkout $TRAVIS_BRANCH
