--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ before_install:
     }
 
 install:
+
+install:
   - sudo apt-get install -y git
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
@@ -60,9 +62,8 @@ install:
   - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible[azure]; else pip
     install ansible[azure]==$ANSIBLE_VERSION; fi
   - ansible --version
-  - ansible-galaxy install azure.azure_preview_modules
-  - pip install xmltodict
-  - pip install -I -r ~/.ansible/roles/azure.azure_preview_modules/files/requirements-azure.txt
+  - ansible-galaxy install Azure.azure_preview_modules
+  - pip install -I -r ~/.ansible/roles/Azure.azure_preview_modules/files/requirements-azure.txt
   - pip install docker
   - pip freeze
   - cp -f ./ansible.cfg /home/travis/.ansible
