add private dns

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,8 @@ install:
   - ansible --version
   - ansible-galaxy install Azure.azure_preview_modules
   - pip install -I -r ~/.ansible/roles/Azure.azure_preview_modules/files/requirements-azure.txt
+  - pip install azure_mgmt_privatedns 
+  - pip install azure_cli_privatedns
   - pip install docker
   - pip freeze
   - cp -f ./ansible.cfg /home/travis/.ansible
