--- a/.travis.yml
+++ b/.travis.yml
@@ -62,8 +62,7 @@ install:
   - sudo apt-get install -y default-jdk
   - sudo apt-get install -y maven sshpass
 
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible[azure]; else pip
-    install ansible[azure]==$ANSIBLE_VERSION; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible[azure]; else pip    install ansible[azure]==$ANSIBLE_VERSION; fi
   - ansible --version
   - ansible-galaxy install Azure.azure_preview_modules
   - pip install -I -r ~/.ansible/roles/Azure.azure_preview_modules/files/requirements-azure.txt
