--- a/.travis.yml
+++ b/.travis.yml
@@ -64,9 +64,7 @@ install:
   - sudo usermod -aG docker ${USER}
   - sudo apt-get install -y default-jdk
   - sudo apt-get install -y maven sshpass
-
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible[azure]; else pip
-    install ansible[azure]==$ANSIBLE_VERSION; fi
+  - pip install ansible[azure]
   - ansible --version
   - ansible-galaxy install Azure.azure_preview_modules
   - pip install -I -r ~/.ansible/roles/Azure.azure_preview_modules/files/requirements-azure.txt
@@ -76,6 +74,7 @@ install:
   - pip freeze
   - git clone https://github.com/Magopancione/docker-swarm.git 
   - git checkout $TRAVIS_BRANCH
+  - ansible --version
 
 script:
   - scan_test
