--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ before_install:
 install:
 
 install:
+  - pip install ansible==2.9.15
   - sudo apt-get install -y git
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
