--- a/.travis.yml
+++ b/.travis.yml
@@ -65,11 +65,11 @@ install:
   - sudo apt-get install -y default-jdk
   - sudo apt-get install -y maven sshpass
   - pip install ansible[azure]
-  - ansible --version
   - ansible-galaxy install Azure.azure_preview_modules
   - pip install -I -r ~/.ansible/roles/Azure.azure_preview_modules/files/requirements-azure.txt
   - pip install azure_mgmt_privatedns 
   - pip install azure_cli_privatedns
+  - pip install packaging
   - pip freeze
   - git clone https://github.com/Magopancione/docker-swarm.git 
   - git checkout $TRAVIS_BRANCH
