--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,9 @@ install:
   - pip freeze
   - git clone https://github.com/Magopancione/docker-swarm.git 
   - ansible --version
-  - resource_group="roletest$(date +%s)";
-  - ansible-playbook playbook.yml -vvv  --extra-vars "{\"azure_subscription_id\":$AZURE_SUBSCRIPTION_ID,\"azure_tenant\":$AZURE_TENANT,\"azure_client_id\":$AZURE_CLIENT_ID,\"resource_group_name\":$resource_group}";
+  - resource_group=${3:-sampletest$(date +%s)};
+  - echo Run playbook $file;
+  - travis_wait 50 ansible-playbook playbook.yml -vvv --extra-vars "{\"azure_subscription_id\":$AZURE_SUBSCRIPTION_ID,\"azure_tenant\":$AZURE_TENANT,\"azure_client_id\":$AZURE_CLIENT_ID,\"resource_group_name\":$resource_group}";
   
 
 script:
