--- a/invertory.cfg
+++ b/invertory.cfg
@@ -16,3 +16,5 @@ admin_username=azureuser
 admin_password=Passw0rd
 location=westeurope
 resource_group=swarm2
+azure_subscription_id=4fef219a-d51b-4aac-8ddb-8f3a1f83d6e2
+tenant=bf5e161b-caee-49ac-aa82-0da0892a729b
