--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ install:
   - ansible --version
   - resource_group=${3:-sampletest$(date +%s)};
   - echo Run playbook $file;
-  - travis_wait 50 ansible-playbook playbook.yml -vvv --extra-vars "{\"azure_subscription_id\":$AZURE_SUBSCRIPTION_ID,\"azure_tenant\":$AZURE_TENANT,\"azure_client_id\":$AZURE_CLIENT_ID,\"resource_group_name\":$resource_group}";
+  - travis_wait 50 ansible-playbook playbook.yml -vvv --extra-vars "{\"azure_subscription_id\":$AZURE_SUBSCRIPTION_ID,\"azure_tenant\":$AZURE_TENANT,\"azure_client_id\":$AZURE_CLIENT_ID,\"resource_group\":$resource_group}";
   
 
 script:
