--- a/invertory.cfg
+++ b/invertory.cfg
@@ -19,3 +19,4 @@ resource_group=swarm2
 subscription_id=4fef219a-d51b-4aac-8ddb-8f3a1f83d6e2
 client_id=0a82ff08-6df9-47b8-bec3-285186c58074
 tenant=bf5e161b-caee-49ac-aa82-0da0892a729b
+auth_source=='auto'
