--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
-- hosts: azure
-  connection: local
-  roles:
-    - role: danny.vmazure
+#- hosts: azure
+#  connection: local
+#  roles:
+#    - role: danny.vmazure
 
 - hosts: managers,workers
   roles:
