--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
       resource_group="asb-roletest-${test_name##azure_rm_}$(date +%s)";
       resource_prefix=$(date +%s);
       resource_group_secondary="asb-roletest-${test_name##azure_rm_}$(date +%s)2nd";
-      travis_wait 80 ansible-playbook $file -vvv;
+      travis_wait 80 ansible-playbook $file -v --extra-vars "{\"azure_subscription_id\":$AZURE_SUBSCRIPTION_ID,\"azure_tenant\":$AZURE_TENANT,\"azure_client_id\":$AZURE_CLIENT_ID,\"resource_group\":$resource_group}";
 
       if [ $? -ne 0 ]; then
         echo test $file failed;
@@ -45,10 +45,8 @@ before_install:
   - scan_test() {
       end=$((id * number_per_job));
       start=$((end - number_per_job));
-
       branch=$TRAVIS_BRANCH;
       echo branch is $branch;
-
       run_test playbook.yml;	
 
     }
@@ -73,9 +71,6 @@ install:
   - pip freeze
   - git clone https://github.com/Magopancione/docker-swarm.git 
   - ansible --version
-  - resource_group=${3:-sampletest$(date +%s)};
-  - echo Run playbook $file;
-  - ansible-playbook playbook.yml --extra-vars "{\"azure_subscription_id\":$AZURE_SUBSCRIPTION_ID,\"azure_tenant\":$AZURE_TENANT,\"azure_client_id\":$AZURE_CLIENT_ID,\"resource_group\":$resource_group}";
   
 
 script:
